[package]
name = "mdbook-tera"
version = "0.3.0"
authors = ["avitex <theavitex@gmail.com>"]
edition = "2018"
description = "Tera preprocessor for mdBook"
documentation = "https://github.com/avitex/mdbook-tera"
homepage = "https://github.com/avitex/mdbook-tera"
repository = "https://github.com/avitex/mdbook-tera"
license = "MIT"

[features]
default = ["toml", "json"]
json = ["serde_json"]

[[bin]]
name = "mdbook-tera"
required-features = ["toml", "json"]

[dependencies]
clap = "~2"
tera = "^1.3.1"
mdbook = "0.3"
serde = "~1"
thiserror = "~1"
globwalk = "0.8"
semver = "0.10"

toml = { version = "~0.5", optional = true }
serde_json = { version = "~1", optional = true}