[package]
name = "mdbook-tera"
version = "0.5.1"
authors = ["avitex <avitex@wfxlabs.com>"]
edition = "2018"
description = "Tera preprocessor for mdBook"
keywords = ["mdbook", "tera", "preprocessor"]
categories = ["command-line-utilities", "template-engine"]
documentation = "https://docs.rs/mdbook-tera"
homepage = "https://github.com/avitex/mdbook-tera"
repository = "https://github.com/avitex/mdbook-tera"
license = "MIT"
readme = "README.md"
include = ["src/**/*", "README.md", "LICENSE", "Cargo.lock", "Cargo.toml"]

[features]
default = ["toml", "json"]
json = ["serde_json"]

[[bin]]
name = "mdbook-tera"
required-features = ["toml", "json"]

[dependencies]
clap = "~3"
serde = "~1"
anyhow = "~1"
semver = "~1"
tera = "^1.17.1"
globwalk = "0.8"
mdbook = { version = "0.4", default-features = false }

toml = { version = "~0.5", optional = true }
serde_json = { version = "~1", optional = true }
